--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/apin"
+              "src/api",
+              "src/favicon.png"
             ],
             "styles": [
               "src/styles.scss"
@@ -93,7 +94,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
